# srunx

./: .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC_SCHEDULED_REPORTING.md  coverage.xml  hatch_build.py  mkdocs.yml  pyproject.toml
.claude/specs/notification-and-state-persistence/: design.md  requirements.md  tasks.md
.claude/specs/workflow-parameter-sweep/: design.md  requirements.md  tasks.md
.github/workflows/: ci.yml  docs.yml  release.yml
.serena/: project.yml
docs/: conf.py  index.md  index.rst  quickstart.rst  robots.txt  user_guide.rst  workflows.rst
docs/explanation/: architecture.md  architecture.rst  mcp-architecture.md  mcp-architecture.rst
docs/how-to/: explorer.md  explorer.rst  mcp-usage.md  mcp-usage.rst  monitoring.md  monitoring.rst  settings.md  settings.rst  smoke-test-notifications.md  sync.md  sync.rst  user_guide.md  user_guide.rst  webui.md  webui.rst  workflows.md  workflows.rst
docs/javascripts/: mermaid-init.js
docs/reference/: api.md  api.rst  mcp-tools.md  mcp-tools.rst  webui-api.md  webui-api.rst
docs/stylesheets/: extra.css
docs/tutorials/: installation.md  installation.rst  mcp-setup.md  mcp-setup.rst  quickstart.md  quickstart.rst  webui.md  webui.rst
examples/: a.py  b.py  c.py  d.py  workflow.yaml
overrides/: main.html
public/: blog.md  blog_ja.md
specs/cli-transport-unification/: plan.md  spec.md  tasks.md
specs/container-runtime/: plan.md  spec.md  tasks.md
specs/dag-builder/: plan.md  spec.md  tasks.md
specs/rsync-sync/: plan.md  spec.md  tasks.md
specs/settings-webui/: plan.md  spec.md  tasks.md
specs/workflow-exec/: plan.md  spec.md  tasks.md
src/srunx/: __init__.py  callbacks.py  client.py  client_protocol.py  config.py  exceptions.py  formatters.py  history.py  logging.py  models.py  rendering.py  runner.py  template.py  utils.py
src/srunx/cli/: __init__.py  main.py  monitor.py  notification_setup.py  submission_plan.py  transport_options.py  watch.py  workflow.py
src/srunx/commands/: README.md
src/srunx/common/: __init__.py  config.py  exceptions.py
src/srunx/containers/: __init__.py  apptainer.py  base.py  pyxis.py
src/srunx/db/: __init__.py  cli_helpers.py  connection.py  migrations.py  models.py
src/srunx/domain/: __init__.py  jobs.py  workflow.py
src/srunx/mcp/: __init__.py  app.py  helpers.py  server.py  transport.py
src/srunx/monitor/: __init__.py  base.py  job_monitor.py  report_types.py  resource_monitor.py  resource_source.py  scheduler.py  types.py
src/srunx/notifications/: __init__.py  presets.py  sanitize.py  service.py
src/srunx/slurm/: __init__.py  (+8 more)
tests/: conftest.py  test_callbacks.py  test_cli.py  test_cli_list.py  test_cli_main.py  test_cli_resources.py  test_cli_sacct.py  test_cli_sinfo.py  test_cli_squeue.py  test_cli_tail.py  test_cli_workflow.py  test_client.py  test_client_protocol.py  test_config.py  test_containers.py  test_formatters.py  test_history.py  test_integration.py  test_job_monitor.py  test_job_render_metadata.py  test_logs.py  test_mcp_server.py  test_mcp_sweep.py  test_models.py  test_monitor_base.py  test_monitor_errors.py  test_monitor_timeout.py  test_rendering.py  test_resource_monitor.py  test_rsync.py  test_runner.py  test_runner_executor_injection.py  test_runner_sweep_integration.py  test_scheduler.py  test_ssh_client.py  test_ssh_components.py  test_ssh_profiles_config.py  test_template.py  test_transport_protocols.py  test_transport_protocols_phase2.py  (+2 more)
tests/architecture/: test_import_layers.py
tests/cli/: test_main.py  test_main_backcompat.py  test_main_transport.py  test_notification_setup.py  test_sbatch_in_place.py  test_submission_plan.py  test_watch_transport.py  test_workflow.py  test_workflow_in_place.py  test_workflow_sweep.py  test_workflow_sweep_in_place.py
tests/common/: test_config.py  test_exceptions.py
tests/containers/: test_containers.py
tests/db/: test_cli_helpers.py  test_connection.py  test_migration_v3.py  test_migration_v3_apply.py  test_migration_v4.py  test_migration_v4_apply.py  test_migration_v5.py  test_migrations.py
tests/domain/: test_jobs.py  test_workflow.py
tests/integration/: test_end_to_end_notification.py  test_real_webhook_smoke.py  test_smoke.py  test_ssh_simple.py  test_sweep_backward_compat.py  test_sweep_end_to_end.py  test_sweep_poller_integration.py
tests/mcp/: test_helpers.py  test_server.py  test_sweep.py  test_transport.py
tests/monitor/: test_job_monitor_ssot.py  test_resource_source.py
tests/notifications/: test_create_watch_for_sweep_run.py  test_presets.py  test_sanitize.py  test_service.py  test_sweep_notification.py
tests/pollers/: test_active_watch_poller.py  test_active_watch_poller_transport.py  test_delivery_poller.py  test_reload_guard.py  test_resource_snapshotter.py  test_supervisor.py
tests/runtime/: test_rendering.py  test_rendering_metadata.py  test_templates.py
tests/security/: test_python_args.py
tests/slurm/: test_local.py  test_log_streaming.py  test_protocols.py  test_ssh_adapter_parsing.py  test_ssh_adapter_remote_sbatch.py  test_ssh_adapter_run.py  test_ssh_executor_pool.py
tests/ssh/: test_components.py  test_status_fallback.py
tests/sweep/: conftest.py  test_aggregator.py  test_expand.py  test_orchestrator.py  test_reconciler.py  test_state_service.py  test_sweep_ssh_integration.py
tests/sync/: test_hash_verify.py  test_lock.py  test_owner_marker.py  test_rsync.py  test_service.py
tests/transport/: test_current_profile.py  test_protocols_phase2.py  test_registry.py  test_review_fixes.py
tests/web/: conftest.py  test_endpoints_router.py  test_notification_routers.py  test_router_config.py  test_router_files.py  test_router_history.py  test_router_templates.py  test_routers.py  test_security.py  test_ssh_adapter_parsing.py  test_ssh_adapter_remote_sbatch.py  test_ssh_adapter_run.py  test_ssh_executor_pool.py  test_sweep_runs_api.py  test_watches_router.py
tests/workflows/: test_runner.py  test_tasks.py
(+341 files in other folders)
