[project]
name = "srunx"
dynamic = ["version"]
description = "Slurm job workflow management"
readme = "README.md"
authors = [{ name = "ksterx", email = "kostonerx@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "anyio>=4.13.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "paramiko>=4.0.0",
    "slack-sdk>=3.41.0",
    "typer>=0.24.1",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
srunx = "srunx.cli.main:main"
srunx-mcp = "srunx.mcp.server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/srunx"]
exclude = [
    "src/srunx/web/frontend/src",
    "src/srunx/web/frontend/node_modules",
    "src/srunx/web/frontend/package.json",
    "src/srunx/web/frontend/package-lock.json",
    "src/srunx/web/frontend/tsconfig*.json",
    "src/srunx/web/frontend/vite.config.ts",
    "src/srunx/web/frontend/index.html",
    "src/srunx/web/frontend/eslint.config.js",
    "src/srunx/web/frontend/components.json",
    "src/srunx/web/frontend/.gitignore",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/srunx",
    "hatch_build.py",
]

[tool.hatch.build.targets.sdist.force-include]
"src/srunx/web/frontend/src/lib" = "src/srunx/web/frontend/src/lib"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel.sources]
"src/srunx" = "srunx"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/srunx/_version.py"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyterlab>=4.5.6",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
]
docs = [
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=srunx",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff.lint]
select = ["I", "E", "F", "B", "C", "UP"]
ignore = ["E501", "C901", "F841", "B017"]

[tool.ruff.lint.per-file-ignores]
"src/srunx/web/routers/*.py" = ["B008"]  # Depends() in function defaults is standard FastAPI

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
plugins = ["pydantic.mypy"]
